Bug 1366143 - Fix alignment of select boxes

--- a/extensions/BugModal/web/bug_modal.css
+++ b/extensions/BugModal/web/bug_modal.css
@@ -191,7 +191,7 @@ a.activity-ref {
     width: 100px;
     min-width: 100px;
     text-align: right;
-    vertical-align: top;
+    vertical-align: middle;
     padding-right: 10px;
     color: #666;
 }
@@ -283,7 +283,7 @@ input[type="number"] {
 #duplicate-container, #duplicate-actions, #assigned-container,
 #bottom-duplicate-container, #bottom-duplicate-actions {
     display: table-cell;
-    vertical-align: top;
+    vertical-align: middle;
     padding-left: 8px;
 }
 
